--- a/app/src/main/res/anim/layout.xml
+++ b/app/src/main/res/anim/layout.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromXDelta="100%"
-    android:fromYDelta="100%"
-    android:duration="4000"
-    >
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="false">
+<translate
+    android:fromXDelta="50%"
+    android:toXDelta="-500%"
+    android:duration="20000"
 
-</translate>
+    />
+
+    <scale
+        android:fromXScale="0.3"
+        android:toXScale="1.5"
+        android:fromYScale="0.3"
+        android:toYScale="1.5"
+        android:pivotX="40%"
+        android:pivotY="40%"
+        android:duration="20000"
+        />
+
+    <scale
+        android:fromXScale="1.5"
+        android:toXScale="0.3"
+        android:fromYScale="1.5"
+        android:toYScale="0.3"
+        android:pivotX="40%"
+        android:pivotY="40%"
+        android:duration="20000"
+        android:fillAfter="true"
+        />
+</set>
