--- a/app/src/main/res/anim/layout.xml
+++ b/app/src/main/res/anim/layout.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
-<translate
-    android:fromXDelta="50%"
-    android:toXDelta="-500%"
-    android:duration="20000"
-
-    />
+    <translate
+        android:fromXDelta="0%p"
+        android:toXDelta="-65%p"
+        android:duration="20000"
+        />
 
     <scale
-        android:fromXScale="0.3"
-        android:toXScale="1.5"
-        android:fromYScale="0.3"
-        android:toYScale="1.5"
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:toXScale="0.3"
+        android:toYScale="0.3"
         android:pivotX="40%"
         android:pivotY="40%"
         android:duration="20000"
         />
 
-    <scale
-        android:fromXScale="1.5"
-        android:toXScale="0.3"
+ <!--   <scale
+        android:fromXScale="0.3"
+        android:toXScale="1"
         android:fromYScale="1.5"
         android:toYScale="0.3"
         android:pivotX="40%"
         android:pivotY="40%"
         android:duration="20000"
         android:fillAfter="true"
-        />
+        />  -->
 </set>
