personalizacion login e integracion con facebook

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#32495D</color>
     <color name="colorPrimaryDark">#273B4D</color>
     <color name="colorAccent">#FEB33B</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
